--- a/collaborative_recommenders.ipynb
+++ b/collaborative_recommenders.ipynb
@@ -1256,7 +1256,7 @@
    "source": [
     "# analyze movie similarity while considering the number of rating each movie has received\n",
     "# we will use join(), we are joining not merging bcs we dont have similar columns\n",
-    "similar_dataframe= similar_datatake effect.frame.join(mean_rating['Count'])\n",
+    "similar_dataframe= similar_dataframe.join(mean_rating['Count'])\n",
     "similar_dataframe.sort_values('correlation', ascending=False).head(5)\n"
    ]
   },
